<resources>
    <string name="app_name">Eduvanz</string>
    <string name="calendar">&#xf073;</string>
    <string name="Rs">\u20B9</string>
    <string name="down"></string>
    <string name="up"></string>
    <string name="circle"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login"></string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="google_play_services_invalid">Google Play Service Version on your device is invalid</string>
    <string name="google_play_services_invalid_title">Invalid Google Play Services</string>
    <string name="no_google_play_services">Your device does not have Google Pay Services. Install From &google_play_services_link;</string>
    <string name="no_google_play_services_title">Google Play Services Missing</string>
    <string name="google_play_services_update">Update Google Play Services on your devices. Update from &google_play_services_link;</string>
    <string name="google_play_services_title_update">Google Play Services is not updated on your device.</string>
    <string name="google_play_services_updating">Google Play Services is being updated on your device. Check from &google_play_services_link;</string>
    <string name="google_play_services_updating_title">Google Play Services is being updated.</string>
    <string name="google_play_services_disabled">Google Play Services is disabled on your device. To use the App, Enable it.</string>
    <string name="google_play_services_disabled_title">Google Play Services Disabled</string>
    <string name="default_web_client_id1" translatable="false">577641006287-mdumdjrsf6o32obdrr74kttbifio73ku.apps.googleusercontent.com</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="facebook_app_id">2033654490205621</string>
    <string name="fb_login_protocol_scheme">fb2033654490205621</string>
    <string name="twitter_consumer_key">Cn3lPUubSrtsJWw1se1OmrDIp</string>
    <string name="twitter_consumer_secret">sA5B4ol5mXoYMEyWivBT2rHIsJwTIjLtdqgjzqpgHeuIsMc2b5</string>
    <string name="desc_linkedin_login">Use Linkedin Login</string>
    <string name="desc_paypal_login">Login with Paypal</string>
    <string name="title_activity_test_google_login">TestGoogleLoginActivity</string>
    <string name="title_activity_test_facebook_login">TestFacebookActivity</string>
    <string name="title_activity_main2">Connect &amp; Score</string>
    <string name="title_activity_start">New Scoring</string>
    <string name="upload">Upload</string>
    <string name="ok">I understand</string>
    <string name="partnerKey">CCesL1c389d78081845e8b661a1d47689fe1a</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_blog">Blog</string>
    <string name="title_interest_rate_policy">Interest Rate Policy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_and_condition">Terms &amp; Condition</string>
    <string name="title_faq">FAQs</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_about_us">About Us</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_loan_application">Loan Application</string>
    <string name="title_how_it_works">How it Works</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_fair_practics_code">Fair Practices Code</string>
    <string name="title_log_out">Log Out</string>
    <string name="special_offers">Special Offers</string>
    <string name="tel_0224523689">tel:0224523689</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="lbr_Ok">Yes</string>
    <string name="pan_card">PAN Card</string>
    <string name="continu">Continue</string>
    <string name="my_profile">My Profile</string>
    <string name="call_us"> Call Us</string>
    <string name="mail_us">Mail Us</string>
    <string name="notification">Notification</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="check_eligiblity">Check Eligiblity</string>
    <string name="apply_now1">Apply Now</string>
    <string name="continue1">Continue</string>
    <string name="contact_number">Contact Number</string>
    <string name="_022_49733674">022-49733674</string>
    <string name="email">Email</string>
    <string name="contact_eduvanz_com">contact@eduvanz.com</string>
    <string name="office">Office</string>
    <string name="_801_jai_antriksh">801, Jai Antriksh,</string>
    <string name="makwana_road_marol_andheri_east">Makwana Road, Marol, Andheri East,</string>
    <string name="mumbai_400059">Mumbai 400059.</string>
    <string name="financing_your_future">Financing Your Future!</string>
    <string name="get_otp">GET OTP</string>
    <string name="eligiblity_chek">Eligiblity Check</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="email_verification">Email Verification</string>
    <string name="social_score">Social Score</string>
    <string name="profile_completion">Profile Completion</string>
    <string name="complete_now1">Complete Now</string>
    <string name="application_status">Application Status</string>
    <string name="processing">Processing</string>
    <string name="loan_details">Loan Details :</string>
    <string name="institute">Institute</string>
    <string name="course">Course</string>
    <string name="fees">Fees</string>
    <string name="loan_amount1">Loan Amount :</string>
    <string name="personal_details">Personal Details </string>
    <string name="mobile">Mobile</string>
    <string name="email1">Email</string>
    <string name="address">Address</string>
    <string name="please_verify_your_mobile_number_to_begin">Please verify your mobile number to begin!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit1">Edit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="skip">SKIP</string>
    <string name="your_name">Your Name</string>
    <string name="email_id1">Email Id</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sms_data">SMS Data</string>
    <string name="permissions_required">PERMISSIONS REQUIRED</string>
    <string name="contacts_and_call_info">Contacts and Call Info</string>
    <string name="device_info">Device Info</string>
    <string name="camera_and_storage">Camera and Storage</string>
    <string name="location_info_and_appusage">Location Info and AppUsage</string>
    <string name="by_proceeding_you_accept">By proceeding you accept</string>
    <string name="and"> and </string>
    <string name="terms_of_service"> terms of service</string>
    <string name="privacy_policy"> privacy policy.</string>
    <string name="permissionsms">To collect and monitor information about bank transactions, names of transacting parties, description of the transactions
    and amount for faster loan processing.</string>
    <string name="permissioncontacts">
<b>Contacts -</b>
To automatically identify potential references for your loan application. \n
<b>Call History -</b>
To gain information from your call logs that may be useful in the processing of your loan application.
</string>
    <string name="permissiondevice">
To collect and monitor specific information about your device including IMEI number , call logs and phone number , in order to uniquely identify the device and ensure unauthorized devices are not able to act on your behalf, thereby help us prevent fraudulent activity.
</string>
    <string name="permissioncamera">
<b>Camera -</b>
To allow to take pictures required for loan application.\n
<b>Storage -</b>
To allow to upload documents and pictures for your loan application.
</string>
    <string name="permissionlocation">
<b>Location -</b>
To collect and monitor information about location of your device.\n
<b>App Usage -</b>
To gain information about your interest and likings to generate your credit score that may be useful in the processing of your loan application.
</string>
    <string name="paymentoptions">
<b>Paytm Payment-</b>
with options like Paytm Wallet, Debit Card, BHIM UPI, Net banking.
</string>
    <string name="please_check_your_network_connection">Please check your network connection</string>
    <string name="please_choose_a_file_first">Please choose a File First</string>
    <string name="file_not_found">File Not Found</string>
    <string name="url_error">URL error!</string>
    <string name="cannot_read_write_file">Cannot Read/Write File!</string>
    <string name="new_version_is_available_please_update">New version is available. Please update the app.</string>
    <string name="are_you_sure_you_waqnt_to_exit">Are you sure, You want to exit ?</string>
    <string name="external_storage_permission_is_necessary">External storage permission is necessary</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="fair_practise_code">Fair Practices Code</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="laf_documents">Doc Uploads</string>
    <string name="kyc_details">KYC Details</string>
    <string name="detailed_info">Detailed Info</string>
</resources>