<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.eduvanzapplication.newUI.newViews.EligibilityCheck">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/colorPrimary">

                <View android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/toolbar_dropshadow"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/profilepic_placeholder" />

                    <TextView
                        android:id="@+id/textView_signin_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:text="@string/your_name"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_marginLeft="15dp"
                            android:id="@+id/textView_signin_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:text="@string/email_id1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <com.eduvanzins.Font.EdtLight
                            android:id="@+id/editText_emalID"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_email_id"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/background_edittext"
                            android:textColorHint="@color/grey"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_marginLeft="15dp"
                            android:id="@+id/textView_signin_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:text="@string/password"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <com.eduvanzins.Font.EdtLight
                            android:id="@+id/editText_password"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                            android:background="@drawable/background_edittext"
                            android:textColorHint="@color/grey"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <TextView
                        android:visibility="gone"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="1dp"
                        android:id="@+id/textView_signin_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <Button
                    android:id="@+id/button_signin_signin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
            <ProgressBar
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar_emailsignin"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:indeterminate="false"
                android:layout_gravity="center" />
        </RelativeLayout>

    </ScrollView>
</LinearLayout>