<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:truesdk="http://schemas.android.com/apk/res-auto"
    tools:context="com.eduvanzapplication.newUI.newViews.SingInWithTruecaller"
    android:id="@+id/rootViews"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView_validateotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <View android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/financing_your_future"
        android:textSize="26sp"
        android:textAllCaps="true"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strgetmobilenonote"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.truecaller.android.sdk.TrueButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                truesdk:truebutton_text="signInShort" />

            <android.support.v7.widget.AppCompatButton
                android:translationZ="1.5dp"
                android:stateListAnimator="@null"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btnOneTapSignIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectanglebackground"
                android:text="@string/sign_in"
                android:textSize="22sp"/>


    </LinearLayout>


</LinearLayout>
