<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.eduvanzapplication.newUI.fragments.LoanApplicationFragment_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_capsule_leftsided"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout_leftoff"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_capsule_primary"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_capsule_primarydark"
                    android:gravity="center"
                    android:text="@string/kyc_details"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView2_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_capsule_primary"
                    android:gravity="center"
                    android:text="@string/detailed_info"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView3_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_capsule_primary"
                    android:gravity="center"
                    android:text="@string/laf_documents"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relborrower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/borrower"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBorrowerArrowKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/up"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linBorrowerForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <include layout="@layout/borrowerdetailedinfo" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relCoborrower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:visibility="gone"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/co_borrower"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCoBorrowerArrowKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/up"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linCoCorrowerForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <include layout="@layout/coborrowerdetailedinfo" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_previous_loanappfragment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/icon_leftarrow"
            android:paddingLeft="20dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_next_loanappfragment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableRight="@drawable/icon_rightarrow"
            android:paddingRight="20dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:background="@color/colorSecondary"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:srcCompat="@drawable/icon_signapplication" />

    <ProgressBar
        android:id="@+id/progressBar_applylona_coborrower"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />

</RelativeLayout>
